feat(html): add basic html elements

--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title></title>
-</head>
-<body>
-  <h1>hello</h1>
-  <script src="../bundle.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title></title>
+  </head>
+  <body>
+    <h1>Simple chat</h1>
+    <div class='ulcontainer'></div>
+
+    <div class= 'inputcontainer'>
+      <input id='input' type='text' width='500' value='write a message here'></input>
+      <button id='send' class='send'> send</button>
+    </div>
+
+
+    <script src="../bundle.js"></script>
+  </body>
 </html>
