--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,8 @@
     <div class='ulcontainer'></div>
 
     <div class= 'inputcontainer'>
-      <input id='input' type='text'  value='write a message here'></input>
-      <button id='send' class='send'>send</button>
+      <input id='input' type='text' value='write a message here'></input>
+      <button id='send'>send</button>
     </div>
 
 
