--- a/app/index.html
+++ b/app/index.html
@@ -7,13 +7,10 @@
   <body>
     <h1>Simple chat</h1>
     <div class='ulcontainer'></div>
-
     <div class= 'inputcontainer'>
-      <input id='input' type='text' value='write a message here'></input>
+      <input id='input' type='text' placeholder='write a message here'></input>
       <button id='send'>send</button>
     </div>
-
-
     <script src="../bundle.js"></script>
   </body>
 </html>
